<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/team1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_1"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/team1ScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="48sp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/team1IncreaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/team1DecreaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/team2TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_2"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/team2ScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="48sp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/team2IncreaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increaseTeam2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/team2DecreaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decreaseTeam2"
        android:layout_gravity="center_horizontal" />


    <RadioGroup
        android:id="@+id/scoreChangeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/scoreOption1RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/scoreOption2RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/scoreOption3RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

    </RadioGroup>

</LinearLayout>
